Changed main for div element

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Frontend Mentor | Results summary component</title>
   </head>
   <body>
-    <div class="container">
+    <main class="container">
       <div class="result">
         <h1 class="result-heading">Your Result</h1>
         <div class="circle">
@@ -72,6 +72,6 @@
             </div>
           </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
